Added map structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	
 		<body>
 			<ul>
-				<li><a href="https://github.com/KChristoffels/md-q-and-a"> First  exercise (github)</a>
-				<li><a href="https://github.com/KChristoffels/HTMLFirst"> Second exercise (html)</a>
+				<li><a href=""> </a>
+				<li><a href=""> </a>
 			</ul>
 		</body>
 	</html>
