--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	
 		<body>
 			<ul>
-				<li><a href=""> </a>
-				<li><a href=""> </a>
+				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises">Exercises</a>
+				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php">php</a>
+				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php/javascript%20to%20php">javascript to php</a>
 			</ul>
 		</body>
 	</html>
