Added visible title

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		</head>
 	
 		<body>
+			<h1>Exercise navigator</h1>
 			<ul>
 				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises">Exercises</a>
 				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php">php</a>
