--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 	
 		<body>
 			<h1>Exercise navigator</h1>
-			<ul>
-				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises">Exercises</a>
-				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php">php</a>
-				<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php/javascript%20to%20php">javascript to php</a>
-			</ul>
+			<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises">Exercises</a>
+				<ul>
+					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php">php</a>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php/javascript%20to%20php">javascript to php</a></li>
+						</ul>
+					</li>
+
+					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/CSS">CSS</a></li>
+					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/Project%20markup">Project markup</a></li>
+					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/html">html</a></li>
+					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/Sass">sass</a></li>
+				</ul>
 		</body>
 	</html>
