added moving image

--- a/exercises/html/Markdown to html/Markdownpage.html
+++ b/exercises/html/Markdown to html/Markdownpage.html
@@ -98,6 +98,8 @@
 				<li>Able to challenge yourself.</li>
 			</ul>
 
+		<img src="TangibleIncompatibleAzurewingedmagpie-size_restricted.gif"/>
+
 
 		</body>
 	</html>
