modified index page

--- a/index.html
+++ b/index.html
@@ -6,18 +6,9 @@
 	
 		<body>
 			<h1>Exercise navigator</h1>
-			<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises">Exercises</a>
-				<ul>
-					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php">php</a>
-						<ul>
-							<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/php/javascript%20to%20php">javascript to php</a></li>
-						</ul>
-					</li>
 
-					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/CSS">CSS</a></li>
-					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/Project%20markup">Project markup</a></li>
-					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/html">html</a></li>
-					<li><a href="https://github.com/KChristoffels/Learning-git-navigation/tree/master/exercises/Sass">sass</a></li>
-				</ul>
+
+					<li><a href="https://kchristoffels.github.io/Learning-git-navigation/exercises/html/Markdown to html/Markdownpage.html">Project markup</a></li>
+					
 		</body>
 	</html>
