modified link in index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<body>
 			<h1>Exercise navigator</h1>
 
-					<li><a href="https://kchristoffels.github.io/Learning-git-navigation/exercises/html/Markdown to html/Markdownpage.html">Project markup</a></li>
+					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/Chapter 1/Exercise 2/Markdownpage.html">Project markup</a></li>
 
 
 		</body>
