--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title> Exercise navigator</title>
+			<title> Learning markdown</title>
 
 		</head>
 	
 		<body>
-			<h1>Exercise navigator</h1>
+			<h1>Kris Christoffels: Exercises</h1>
 
-					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/Chapter 1/Exercise 2/Markdownpage.html">Project markup</a></li>
+				<li>Chapter 1</li>
+					<ul>
+					<li>Exercise 1 (git navigation)</li>
+					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/Chapter 1/Exercise 2/Markdownpage.html">Exercise 2 (markdownto html)</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/Chapter%201/Exercise%202/Markdownpage.html">Code</a></li>
+						</ul>
+					</ul>
+				<li>Chapter 2</li>
+
+
 
 
 		</body>
