modified file titles

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 				<li>Chapter 1</li>
 					<ul>
 					<li>Exercise 1 (git navigation)</li>
-					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/Chapter 1/Exercise 2/Markdownpage.html">Exercise 2 (markdownto html)</a></li>
+					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/1.html/2.markdown-to-html/Markdownpage.html">Exercise 2 (markdownto html)</a></li>
 						<ul>
-							<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/Chapter%201/Exercise%202/Markdownpage.html">Code</a></li>
+							<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/1.html/2.markdown-to-html/Markdownpage.html">Code</a></li>
 						</ul>
 					</ul>
 				<li>Chapter 2</li>
