--- a/index.html
+++ b/index.html
@@ -17,9 +17,23 @@
 						</ul>
 					</ul>
 				<li>Chapter 2</li>
+					<ul>
+						<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/2.css/1.about-me/about-me.html">Exercise 1 (about me)</a> </li>
+							<ul>
+								<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/2.css/1.about-me/about-me.html">Code</a> </li>
+							</ul>
+						<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/2.css/2.flexbox/minesweeper.html">Exercise 2 (flexbox)</a></li>
+							<ul>
+								<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/2.css/2.flexbox/minesweeper.html">Code</a></li>
+							</ul>
+						<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/2.css/3.grid-chessboard/chessboard.html">Exercise 3 (grid-chessboard)</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/2.css/3.grid-chessboard/chessboard.html">Code</a></li>
+						</ul>
+					</ul>
 
 
 
-
+<
 		</body>
 	</html>
