--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 							<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/2.css/3.grid-chessboard/chessboard.html">Code</a></li>
 						</ul>
 					</ul>
+			<li>Chapter 3</li>
+				<ul>
+					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
+						<ul>
+							<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
+						</ul>
+				</ul>
+
 
 
 
