added sass project

--- a/exercises/3.sass/adminpanel.html
+++ b/exercises/3.sass/adminpanel.html
@@ -9,31 +9,39 @@
 <body>
 
 <div class="visitorcontainer">
-    <div class="visitors"></div>
+    <div class="visitors"><img src="resources/pictures/Screenshot_2019-09-24 AdminLTE 2 Dashboard.png"></div>
     <div class="visitordata">
         <div class="inventory">
             <i class="fas fa-tag"></i>
-            <p>INVENTORY</p>
-            <p class="amountnr">5200</p>
-            <p>50% Increase in 30 days</p>
+            <div class="columwrapper">
+                <p>INVENTORY</p>
+                <p class="amountnr">5200</p>
+                <p>50% Increase in 30 days</p>
+            </div>
         </div>
         <div class="mentions">
             <i class="far fa-heart"></i>
-            <p>MENTIONS</p>
-            <p class="amountnr">92050</p>
-            <p>20% Increase in 30 days</p>
+            <div class="columwrapper">
+                <p>MENTIONS</p>
+                <p class="amountnr">92050</p>
+                <p>20% Increase in 30 days</p>
+            </div>
         </div>
         <div class="downloads">
             <i class="fas fa-cloud-download-alt"></i>
-            <p>DOWNLOADS</p>
-            <p class="amountnr">114381</p>
-            <p>70% Increase in 30 days</p>
+            <div class="columwrapper">
+                <p>DOWNLOADS</p>
+                <p class="amountnr">114381</p>
+                <p>70% Increase in 30 days</p>
+            </div>
         </div>
         <div class="directmessages">
             <i class="far fa-comment-dots"></i>
-            <p>DIRECT MESSAGES</p>
-            <p class="amountnr">163921</p>
-            <p>40% Increase in 30 days</p>
+            <div class="columwrapper">
+                <p>DIRECT MESSAGES</p>
+                <p class="amountnr">163921</p>
+                <p>40% Increase in 30 days</p>
+            </div>
         </div>
     </div>
 </div>
