--- a/index.html
+++ b/index.html
@@ -35,13 +35,28 @@
 				<ul>
 					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
 						<ul>
-							<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
+							<li><a href="https://github.com/KChristoffels/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
 						</ul>
 				</ul>
+			<li>Chapter 4 (client project)</li>
+			<ul>
+				<li><a href="https://kchristoffels.github.io/Learning-markdown/blob/master/exercises/4.client-project/main/index.html"></a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/4.client-project/main/index.html"></a></li>
+					</ul>
+			</ul>
+			<li>Chapter 5 (portfolio)</li>
+			<ul>
+				<li><a href="https://kchristoffels.github.io/portfolio/blob/master/portfolio.html"></a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/portfolio/blob/master/portfolio.html"></a></li>
+					</ul>
+			</ul>
+			
 
 
 
 
-<
+
 		</body>
 	</html>
