--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
 						<li><a href="https://github.com/KChristoffels/portfolio/blob/master/portfolio.html"></a></li>
 					</ul>
 			</ul>
+			<li>Chapter 6 learning front-end</li>
+			<ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/1.variables/index.html">1.learning javascript</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/exercises/1.javascript/1.variables/index.html"></a>code</li>
+					</ul>
+			</ul>
 			
 
 
