--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 			</ul>
 			<li>Chapter 5 (portfolio)</li>
 			<ul>
-				<li><a href="https://kchristoffels.github.io/portfolio/blob/master/portfolio.html"></a></li>
+				<li><a href="https://kchristoffels.github.io/portfolio/blob/master/portfolio.html">Portfolio</a></li>
 					<ul>
-						<li><a href="https://github.com/KChristoffels/portfolio/blob/master/portfolio.html"></a></li>
+						<li><a href="https://github.com/KChristoffels/portfolio/blob/master/portfolio.html">Code</a></li>
 					</ul>
 			</ul>
 			<li>Chapter 6 learning front-end</li>
