modified name index

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
 					</ul>
 			<li>Chapter 3</li>
 				<ul>
-					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
+					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html">Admin panel</a></li>
 						<ul>
-							<li><a href="https://github.com/KChristoffels/Learning-markdown/exercises/3.sass/adminpanel.html"></a></li>
+							<li><a href="https://github.com/KChristoffels/Learning-markdown/exercises/3.sass/adminpanel.html">Code</a></li>
 						</ul>
 				</ul>
 			<li>Chapter 4 (client project)</li>
 			<ul>
-				<li><a href="https://kchristoffels.github.io/Learning-markdown/blob/master/exercises/4.client-project/main/index.html"></a></li>
+				<li><a href="https://kchristoffels.github.io/Learning-markdown/blob/master/exercises/4.client-project/main/index.html">Client-project</a></li>
 					<ul>
-						<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/4.client-project/main/index.html"></a></li>
+						<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/4.client-project/main/index.html">Code</a></li>
 					</ul>
 			</ul>
 			<li>Chapter 5 (portfolio)</li>
 			<ul>
-				<li><a href="https://kchristoffels.github.io/portfolio/blob/master/portfolio.html">Portfolio</a></li>
+				<li><a href="https://kchristoffels.github.io/portfolio/index.html">Portfolio</a></li>
 					<ul>
 						<li><a href="https://github.com/KChristoffels/portfolio/blob/master/portfolio.html">Code</a></li>
 					</ul>
