--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
 			</ul>
 			<li>Chapter 6 learning front-end</li>
 			<ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/1.variables/index.html">1.learning javascript</a></li>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/1.variables/index.html">1.variables</a></li>
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/exercises/1.javascript/1.variables/index.html"></a>code</li>
+					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/2.conditions/index.html">Conditions</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/exercises/1.javascript/2.conditions/index.html"></a></li>
 					</ul>
 			</ul>
 			
