--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 					</ul>
 			<li>Chapter 3</li>
 				<ul>
-					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/adminpanel.html">Admin panel</a></li>
+					<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/3.sass/index.html">Admin panel</a></li>
 						<ul>
-							<li><a href="https://github.com/KChristoffels/Learning-markdown/exercises/3.sass/adminpanel.html">Code</a></li>
+							<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/3.sass/index.html">Code</a></li>
 						</ul>
 				</ul>
 			<li>Chapter 4 (client project)</li>
 			<ul>
-				<li><a href="https://kchristoffels.github.io/Learning-markdown/blob/master/exercises/4.client-project/main/index.html">Client-project</a></li>
+				<li><a href="https://kchristoffels.github.io/Learning-markdown/exercises/4.client-project/main/index.html">Client-project</a></li>
 					<ul>
 						<li><a href="https://github.com/KChristoffels/Learning-markdown/blob/master/exercises/4.client-project/main/index.html">Code</a></li>
 					</ul>
@@ -56,11 +56,11 @@
 			<ul>
 				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/1.variables/index.html">1.variables</a></li>
 					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/exercises/1.javascript/1.variables/index.html"></a>code</li>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/1.variables/index.html">code</a></li>
 					</ul>
 				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/2.conditions/index.html">Conditions</a></li>
 					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/exercises/1.javascript/2.conditions/index.html"></a></li>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/2.conditions/index.html">Code</a></li>
 					</ul>
 			</ul>
 			
