--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/1.variables/index.html">code</a></li>
 					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/2.conditions/index.html">Conditions</a></li>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/2.conditions/index.html">2.conditions</a></li>
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/2.conditions/index.html">Code</a></li>
 					</ul>
