--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/2.conditions/index.html">Code</a></li>
 					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/3.loops/index.html">3.loops</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/3.loops/index.html">Code</a></li>
+					</ul>
 			</ul>
 			
 
