updated index and readme files

--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/3.loops/index.html">Code</a></li>
 					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/4.dom/index.html">4.dom</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/4.dom/index.html">Code</a></li>
+					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/5.functions/index.html">5.functions</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/5.functions/index.html">Code</a></li>
+					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/6.objects/exercise 1/index.html">6.objects</a></li>
+				<ul>
+					<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/6.objects/exercise 1/index.html">Code</a></li>
+				</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/7.ajax/index.html">7.functions</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/7.ajax/index.html">Code</a></li>
+					</ul>
 			</ul>
 			
 
