update exercise index

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/7.ajax/index.html">Code</a></li>
 					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/8.console-game/index.html">8.console game</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/8.console-game/index.html">Code</a></li>
+					</ul>
+				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/9.form-challenge/index.html">9.form-challenge</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/9.form-challenge/index.html">Code</a></li>
+					</ul>
 			</ul>
 			
 
