--- a/index.html
+++ b/index.html
@@ -53,45 +53,51 @@
 					</ul>
 			</ul>
 			<li>Chapter 6 learning front-end</li>
-			<ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/1.variables/index.html">1.variables</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/1.variables/index.html">code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/2.conditions/index.html">2.conditions</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/2.conditions/index.html">Code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/3.loops/index.html">3.loops</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/3.loops/index.html">Code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/4.dom/index.html">4.dom</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/4.dom/index.html">Code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/5.functions/index.html">5.functions</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/5.functions/index.html">Code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/6.objects/exercise 1/index.html">6.objects</a></li>
+				<ul>6.1 Javascript</ul>
 				<ul>
-					<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/6.objects/exercise 1/index.html">Code</a></li>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/1.variables/index.html">1.variables</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/1.variables/index.html">code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/2.conditions/index.html">2.conditions</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/2.conditions/index.html">Code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/3.loops/index.html">3.loops</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/3.loops/index.html">Code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/4.dom/index.html">4.dom</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/4.dom/index.html">Code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/5.functions/index.html">5.functions</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/5.functions/index.html">Code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/6.objects/exercise 1/index.html">6.objects</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/6.objects/exercise 1/index.html">Code</a></li>
+					</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/7.ajax/index.html">7.functions</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/7.ajax/index.html">Code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/8.console-game/index.html">8.console game</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/8.console-game/index.html">Code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/9.form-challenge/index.html">9.form-challenge</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/9.form-challenge/index.html">Code</a></li>
+						</ul>
 				</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/7.ajax/index.html">7.functions</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/7.ajax/index.html">Code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/8.console-game/index.html">8.console game</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/8.console-game/index.html">Code</a></li>
-					</ul>
-				<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/1.javascript/9.form-challenge/index.html">9.form-challenge</a></li>
-					<ul>
-						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/1.javascript/9.form-challenge/index.html">Code</a></li>
-					</ul>
-			</ul>
-			
+				<ul>6.2 Mastering Javascript
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/2.mastering-javascript/1.dom-manipulation/index.html">1.dom-manipulation</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/1.dom-manipulation/index.html">code</a></li>
+						</ul>
+				</ul>
 
 
 
