--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
 						<ul>
 							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/1.dom-manipulation/index.html">code</a></li>
 						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/2.mastering-javascript/2.peer-programming/index.html">2.peer-programming</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/2.peer-programming/index.html">code</a></li>
+						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/2.mastering-javascript/3.snake/index.html">3.snake</a></li>
+						<ul>
+							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/3.snake/index.html">code</a></li>
+						</ul>
 				</ul>
 
 
