--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 						<ul>
 							<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/3.snake/index.html">code</a></li>
 						</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/2.mastering-javascript/4.js-test/index.html">4.js-test</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/4.js-test/index.html">code</a></li>
+					</ul>
 				</ul>
 
 
