--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 					<ul>
 						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/4.js-test/index.html">code</a></li>
 					</ul>
+					<li><a href="https://kchristoffels.github.io/learning-front-end/exercises/2.mastering-javascript/5.rpg-challenge/index.html">5.rpg-challenge</a></li>
+					<ul>
+						<li><a href="https://github.com/KChristoffels/learning-front-end/blob/master/exercises/2.mastering-javascript/5.rpg-challenge/index.html">code</a></li>
+					</ul>
 				</ul>
 
 
